[package]
name = "ulid-rs"
version = "0.0.1"
description = "ULID generation and processing library for Rust"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"

keywords = ["ulid", "uuid", "sortable", "identifier"]
categories = ["data-structures","date-and-time","encoding","parsing","value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3" }
chrono = { version = "0.4"}
thiserror = { version = "1.0.20" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
once_cell = "1.5.2"
rusty_ulid = "0.10.0"
ulid = "0.4.1"

[[bench]]
name = "bench_main"
harness = false