[package]
name = "ulid-generator-rs"
version = "0.0.95"
description = "A Rust crate for generating ULIDs"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ulid", "uuid", "sortable", "identifier"]
categories = ["data-structures","date-and-time","encoding","parsing","value-formatting"]
readme = "README.md"
repository = "https://github.com/j5ik2o/ulid-generator-rs"

[badges]
github = { repository = "j5ik2o/ulid-generator-rs", workflow = "Rust" }

[dependencies]
rand = { version = "0.8.5" }
chrono = { version = "0.4"}
thiserror = { version = "1.0.52" }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.6.1", features = ["v4"], optional = true }

[dev-dependencies]
criterion = "0.5"
# huxi/rusty_ulid
rusty_ulid = "2.0.0"
# dylanhart/ulid-rs
ulid = "1.1.0"
# suyash/ulid-rs
ulid-rs = "0.1.0"


[[bench]]
name = "bench_main"
harness = false

# [profile.release]
# debug = true
